# red-salud

./: .gitattributes  .gitignore  .npmrc  .tool-versions  00_COMIENZA_AQUI.md  ANALISIS_CAMPOS_CITA.md  ANALISIS_MODO_OSCURO_PAGINAS_PUBLICAS.md  ANALISIS_REQUERIMIENTOS_AVANZADOS.md  AUTOCOMPLETADO_MOTIVOS.md  CAMBIOS_FINALES_SIDEBAR.md  CEDULA_VALIDATION_SETUP.md  CHANGELOG_PERFIL_V2.md  CHECKLIST-DESPLIEGUE.md  CHECKLIST-IMPLEMENTACION.md  COMANDOS-RAPIDOS.md  COMIENZA_AQUI.md  COMPLETAR_ELEMENTOS_RESTANTES.md  CONFIGURACION_DOMINIO.md  CORRECCION_BUGS_SIDEBAR.md  CORRECTIONS_SUMMARY.md  DASHBOARD_MEDICO_README.md  DATOS_AUTOCOMPLETADOS.md  DELIVERABLES_SUMMARY.txt  DEPLOY-COMMANDS.md  DEPLOY-INSTRUCTIONS.md  DEPLOYMENT-SUCCESS.md  DIDIT_ANALYSIS.md  DIDIT_IMPLEMENTATION.md  DIDIT_SETUP.md  DIDIT_STATUS.md  EJEMPLOS_ANTES_DESPUES_DARK_MODE.md  ENTREGA_FINAL.md  ESTADISTICAS_MEDICO_IMPLEMENTACION.md  EXECUTIVE_SUMMARY.md  EXPLICACION_CEDULAS_SIN_CNE.md  FASE1_COMPLETADA.md  FASE1_FINALIZADA.md  FASE2_DASHBOARDS_INICIO.md  FIX_TEMPLATE_EDITOR_ERROR.md  GUIA_RAPIDA_TEMPLATES.md  (+84 more)
app/: academy-theme.css  globals.css  layout.tsx  page.tsx
apps/desktop/corporativo/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/corporativo/src-tauri/capabilities/: default.json
apps/desktop/corporativo/src-tauri/icons/: icon.icns
apps/desktop/corporativo/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/farmacia/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/farmacia/src-tauri/capabilities/: default.json
apps/desktop/farmacia/src-tauri/src/: main.rs
bcv-rate-service/: Dockerfile  index.js  package-lock.json  package.json  test-local.js  test-quick.js
docs/: ANALISIS-RUTAS-404.md  ANALISIS_SECCION_AGENDA.md  CEDULA_VALIDATION.md  COMPONENTES-COMPARTIDOS.md  INDEX.md  (+45 more)
(+1703 files in other folders)
