[package]
name = "red-salud-farmacia"
version = "1.0.0"
description = "Sistema de gestión integral para farmacias"
authors = ["Red-Salud"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-store = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
